<resources>
    <string name="app_name">Flang</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="slogan">Learn at your pace.</string>
    <string name="interval">Time interval</string>
    <string name="notif_freq">Time between notifications</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="you_learned">You learned</string>
    <string name="words">Words</string>
    <string name="start_learning">Start learning</string>
    <string name="i_learned">I learned</string>
    <string name="words_in">words in</string>
    <string name="chooser">Share using&#8230;</string>
    <string name="get_notification" translatable="false">get notification</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="feedback">Feedback</string>
    <string name="email_noclient">No email client found</string>
    <string name="share">Share</string>
    <string name="word_info">Word information</string>
    <string name="original">Original</string>
    <string name="translation">Translation</string>
    <string name="first_slide">Flang is a tool to help you build your vocabulary,\nfor any language you choose.</string>
    <string name="second_slide">You will receive notifications containing new words at a rate you choose.\nThis way, language learning won\'t become a chore.</string>
    <string name="third_slide">Once you\'ve learned all of the words, keep practising, or take a test and show everyone your new skills!</string>
    <string name="help">Help</string>
    <string name="foo" translatable="false">foo</string>
    <string name="you_learn">you learn</string>
    <string name="this_is_the">This is the</string>
    <string name="word">word</string>
    <string name="powered_by_yandex_translate" translatable="false">Powered by Yandex.Translate</string>
    <string name="take_a_test">Take a test</string>
    <string name="translate_word_above">Translate the word above</string>
    <string name="show_in_lockscreen">Public notifications</string>
    <string name="lockscreen_summary_on">Notification content visible over lock screen</string>
    <string name="lockscreen_summary_off">Notification content not visible over lock screen</string>
    <string name="std_ord_indicator">th</string>
    <string name="one_ord_indicator">st</string>
    <string name="two_ord_indicator">nd</string>
    <string name="thr_ord_indicator">rd</string>
    <string name="means">means</string>
    <string name="in">in</string>
    <string name="that">that</string>
    <string name="begin_toast">You will now receive periodical notifications</string>
    <string name="test_history">Test history</string>
    <string name="no_tests_yet">You haven\'t taken any tests yet</string>
    <string name="no_network">You\'re not connected to the Internet</string>
    <string name="test_results">Test results</string>
    <string name="total_score">Total score</string>
    <string name="i_scored">I scored</string>
    <string name="in_a">in a</string>
    <string name="test_in_phrase">test</string>
    <string name="my_average_test_score_in">My average test score in</string>
    <string name="is">is</string>
    <string name="average">Average</string>
    <string name="chart">Chart</string>
    <string name="by_date">By date</string>
    <string name="version">Version</string>
    <string name="stop_clicking">Stop clicking me</string>
    <string name="your_test_will_start_soon">Your test will start soon</string>
    <string name="stand_by">Stand by</string>
    <string name="delete_progress">Delete all previous data?</string>
    <string name="changing_language_will_erase_data">Changing language will erase all previous data</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="youll_take_test">You\'ll be able to take a test once you\'ve learnt enough words</string>
    <string name="sleepoff">You won\'t get any notifications at night</string>
    <string name="sleepon">You\'ll get notifications, even at night</string>
    <string name="sleeptitle">Block notifications at night</string>
    <string name="minutes">Minutes</string>
</resources>