<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:defaultValue="30"
        android:dialogIcon="@drawable/ic_time_gray_24dp"
        android:icon="@drawable/ic_time_gray_24dp"
        android:key="interval"
        android:summary="@string/notif_freq"
        android:title="@string/interval"
        app:theme="@style/orangePD"
        android:theme="@style/orangePD" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_bell_gray_24dp"
        android:key="show_in_lockscreen"
        android:summaryOff="@string/lockscreen_summary_off"
        android:summaryOn="@string/lockscreen_summary_on"
        android:title="@string/show_in_lockscreen" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_bed_gray_24dp"
        android:summaryOff="@string/sleepon"
        android:summaryOn="@string/sleepoff"
        android:key="sleep"
        android:title="@string/sleeptitle" />

    <Preference
        android:icon="@drawable/ic_info_outline_gray_24dp"
        android:key="vers"
        android:title="@string/version" />

</PreferenceScreen>