<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingStart="40dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/translated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/words_learnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/foo" />

</LinearLayout>