<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/twenty_four_dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_marginEnd="12dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/texts"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrows_gray_24dp"
            android:onClick="swapLangs"
            android:background="@color/transparent" />

        <Spinner
            android:id="@+id/to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_marginTop="0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinners"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:drawablePadding="@dimen/eightdp"
        android:drawableStart="@drawable/ic_flag_white_24dp"
        android:onClick="resetAlarm"
        android:text="@string/start_learning"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/twenty_four_dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoYandTran"
        android:text="@string/powered_by_yandex_translate" />

    <Button
        android:id="@+id/get_not_btn"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:onClick="getNot"
        android:text="@string/get_notification"
        android:visibility="gone" />

</RelativeLayout>
