<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header_history"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_row"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/twenty_four_dp"
            android:text="@string/average"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingEnd="@dimen/twenty_four_dp"
            android:text="10"
            android:textSize="24sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_tests_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/notests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tests_yet"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/test"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/eightdp"
            android:drawableStart="@drawable/ic_check"
            android:drawableTint="@color/colorPrimaryDark"
            android:onClick="gotoTest"
            android:text="@string/take_a_test"
            android:visibility="visible" />

    </LinearLayout>

    <ListView
        android:id="@+id/test_history_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_history" />
</RelativeLayout>